--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,15 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
+
+@media (min-width: 1024px) { 
+  #root {
+    padding: 2rem;
+  }
+}
+
 
 .logo {
   height: 6em;
